Styling- Filters, dropdown overlaping fixed

--- a/staticfiles/applicant/assets/css/applicant.css
+++ b/staticfiles/applicant/assets/css/applicant.css
@@ -58,6 +58,16 @@
 /*-- Google Font --*/
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Work+Sans:wght@400;500;600;700;900&display=swap");
 /*-- Common Style --*/
+
+.dropdown-menu{
+  z-index: 100;
+}
+
+.list{
+  z-index: 100;
+}
+
+
 *, *::after, *::before {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
